--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,14 @@ body{
     font-family: "Arvo", serif;
 }
 
+img{
+    cursor: pointer;
+}
+
 section{
         width: 100%;
         height: 100vh;
+        position: relative;
 }
 .black_side{
     text-align: center;
@@ -35,7 +40,7 @@ section{
 h1{
     /* padding-top: 50px; */
     margin: 0%;
-    font-size: 45px;
+    font-size: 30px;
     width: fit-content;
     margin:0 auto;
 }
@@ -73,10 +78,12 @@ h2{
     font-size: clamp(.5rem,50vw,65rem);
     height: fit-content;
     line-height: .9;
+    pointer-events: none;
 }
 
 .fouls{
     font-size: 6rem;
+    line-height: .95;
 }
 .flexboxer{
     display: flex;
@@ -94,5 +101,32 @@ h2{
 }
 .bfouls{
     font-size: 6rem;
+    line-height: 1;
 }
 
+/* Styling for timer starts here */
+
+.timer_parent{
+    position: absolute;
+    background-color: white;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 225px;
+    padding: 15px;
+    border-radius: 15px;
+    filter: drop-shadow(0px 9px 100px rgb(135, 135, 135));
+    
+}
+
+.timer_child{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.timer h1{
+    font-size: clamp(1rem,7vw,6.5rem);
+}
+
+/* Styling for timer ends here */
