--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ body{
 section{
         width: 100%;
         height: 100vh;
+        position: relative;
 }
 .black_side{
     text-align: center;
@@ -35,7 +36,7 @@ section{
 h1{
     /* padding-top: 50px; */
     margin: 0%;
-    font-size: 45px;
+    font-size: 30px;
     width: fit-content;
     margin:0 auto;
 }
@@ -73,10 +74,12 @@ h2{
     font-size: clamp(.5rem,50vw,65rem);
     height: fit-content;
     line-height: .9;
+    pointer-events: none;
 }
 
 .fouls{
     font-size: 6rem;
+    line-height: .90;
 }
 .flexboxer{
     display: flex;
@@ -94,5 +97,24 @@ h2{
 }
 .bfouls{
     font-size: 6rem;
+    line-height: .90;
+}
+.timer_parent{
+    position:absolute;
+    background-color: white;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 250px;
+    padding: 15px;
+    border-radius: 20px;
+    filter: drop-shadow(0px 5px 30px black);
+
+}
+.timer_child{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
 }
 
