--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ h1{
     margin: 0%;
     font-size: 30px;
     width: fit-content;
-    margin:0 auto;
+    /* margin:0 auto; */
 }
 
 
@@ -65,8 +65,9 @@ h1{
 }
 
 .whitescore,.whitefoul{
-    width: 35%;
-   /* border: red solid 1px; */
+    /* width: 35%;
+   border: red solid 1px; */
+   margin: 0 20px;
 }
 
 h2{
@@ -134,8 +135,20 @@ h2{
     pointer-events: none;
 }
 
-.first_team img{
-    width: 12%;
+/* Team names styling */
+
+.team_names{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.accept_icon_container{
+    width: 5%;
+}
+
+.accept_icon{
+    width: 100%;
     margin-left: 20px;
     display: none;
 }
