--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,16 @@
     src: url(../fonts/CollegeSlabSC.otf);
 }
 
+@font-face{
+    font-family: Arvo;
+    src:url(../fonts/Arvo-Regular.ttf)
+}
+
 body{
     margin: 0;
     padding: 0;
-    font-family: "Arvo", serif;
+    font-family: Arvo, sans-serif;
+    overscroll-behavior: none;
 }
 
 img{
@@ -25,7 +31,7 @@ section{
     width: 100%;
     height: 53%;
     color: white;
-    background-color: black;
+    background-color: #142c30;
     position: relative;
     display: flex;
     flex-direction: column;
